// Vitest Snapshot v1

exports[`hexToObject > works with eight chars 1`] = `
{
  "a": 0.5333333333333333,
  "b": 255,
  "g": 136,
  "r": 255,
}
`;

exports[`hexToObject > works with four chars 1`] = `
{
  "a": 0.5333333333333333,
  "b": 255,
  "g": 136,
  "r": 255,
}
`;

exports[`hexToObject > works with six chars 1`] = `
{
  "a": 1,
  "b": 255,
  "g": 136,
  "r": 255,
}
`;

exports[`hexToObject > works with three chars 1`] = `
{
  "a": 1,
  "b": 255,
  "g": 136,
  "r": 255,
}
`;

exports[`hexToObject > works with undefined 1`] = `undefined`;
